@@ -1,6 +1,7 @@
 # vim: set noexpandtab:
 
 2012-09-19 Serhan Mete <amete@cern.ch>
+	* Root/SusyNtTools.cxx: Update getMetRel and passTopTag for the latest recommendations
 	* Root/SusyNtAna.cxx: Added extra JetVector (m_signalJets2Lep) to getSignalObjects(...)
 	* SusyNtuple/SusyNtAna.h: Define the above JetVector
 	* Root/SusyNtTools.cxx: Added multiple functions to select/count signal jets for 2 Leptons analysis 
